# cloudwagon

./: .coveragerc  .dockerignore  .eslintoutputrc  .eslintrc.cjs  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  Jenkinsfile  README.rst  config-overrides.js  config.properties  docker-compose.yml  global.teardown.ts  jest.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  sonar-project.properties  tox.ini  tsconfig.json  vite.config.ts
.github/workflows/: playwright.yml
backend/: Dockerfile  pyproject.toml
backend/speedcloud/: __init__.py  config.py  info.py  main.py  runner.py
backend/speedcloud/api/: actions.py  job_manager.py  routes.py  storage.py
backend/speedcloud/site/: routes.py
backend/speedcloud/site/templates/: frontpage.html
backend/tests/: test_config.py
ci/docker/jenkins/: Dockerfile
ci/docker/jenkins/python/: Dockerfile
ci/docker/tox/linux/: Dockerfile
ci/jenkins/scripts/: sonarqube.groovy
contrib/: update_freeze.sh
deploy/: Caddyfile  docker-compose.override.yml
extra/docker/: docker_config.toml
frontend/: .eslintoutputrc  Dockerfile  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  DynamicAPISelect.tsx  FileManagement.tsx  FilesDialog.tsx  JobProgressDialog.tsx  SubmitJob.tsx  SystemInfo.tsx  Widgets.tsx  setupProxy.js
frontend/src/__tests__/: App.test.tsx  FileManagment.test.tsx  JobProgressDialog.test.tsx  SubmitJob.test.tsx  Widgets.test.tsx
frontend/tests/: App.test.tsx  FileManagment.test.tsx  JobProgressDialog.test.tsx  SubmitJob.test.tsx  Widgets.test.tsx
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-freeze.txt  requirements.in  requirements.txt
speedcloud/: helloworld.py  main.py
speedcloud/api/: actions.py  routes.py
src/backend/: Dockerfile
src/backend/speedcloud/: __init__.py  __main__.py  app.py  config.py  exceptions.py  info.py  job_manager.py  log.py  main.py  runner.py  workflow_manager.py
src/backend/speedcloud/api/: __init__.py  actions.py  job_manager.py  packets.py  routes.py  schema.py  storage.py  stream.py
src/backend/speedcloud/site/: __init__.py  routes.py
src/frontend/: Dockerfile  babel.config.js  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.test.tsx  App.tsx  FileManagement.tsx  SubmitJob.tsx  SystemInfo.tsx  Widgets.tsx  index.css  index.tsx
src/frontend/src/__tests__/: App.test.tsx  FileManagment.test.tsx  SubmitJob.test.tsx
src/frontend/src/components/: SystemInfo.tsx  index.ts
src/frontend/src/components/FileManagement/: FileManagement.tsx  FileManagementPage.tsx  FileManagment.test.tsx  FileManagment.types.ts  index.ts
src/frontend/src/components/SubmitJob/: APISelectDir.tsx  GetWidget.tsx  SubmitJob.test.tsx  SubmitJob.tsx  SubmitJob.types.tsx  WorkflowSelector.tsx  index.ts  useWorkflowList.tsx
src/frontend/src/components/apiHooks/: getDirectoryContents.ts  index.ts
src/frontend/src/components/apiHooks/useAxios/: index.ts  useAxios.test.tsx  useAxios.tsx
src/frontend/src/components/apiHooks/useDirectoryContents/: index.ts  useDirectoryContents.test.tsx  useDirectoryContents.tsx
src/frontend/src/components/apiHooks/useSSE/: index.ts  useSSE.test.tsx  useSSE.tsx  useSSE.types.ts
src/frontend/src/components/apiHooks/useUploadFiles/: useUploadFiles.tsx
src/frontend/src/components/dataStream/: index.ts  stream.types.tsx
src/frontend/src/components/dataStream/useGetStreamHandle/: index.ts  useGetStreamHandle.tsx
src/frontend/src/components/dataStream/useJobStream/: index.ts  useJobStream.test.tsx  useJobStream.tsx  useJobStream.types.ts
src/frontend/src/components/dataStream/useSSEStream/: index.ts  (+1 more)
src/frontend/src/components/dialogs/: DirectoryDialog.tsx  index.ts
src/frontend/src/components/pages/: Page.types.tsx  index.ts
src/frontend/src/components/widgets/: CurrentPath.tsx  FileSelect.tsx  Widgets.types.tsx  index.ts  useDirectory.tsx  useFilePathIsValid.tsx
tests/: App.test.tsx  FileManagment.test.tsx  JobProgressDialog.test.tsx  SubmitJob.test.tsx  Widgets.test.tsx  conftest.py  test_api.py  test_config.py  test_integration.py  test_job_manager.py  test_packets.py  test_storage.py  test_stream.py  test_workflow_manager.py
tests/playwright/: fileManagement.spec.ts
(+72 files in other folders)
