[build-system]
requires = ["setuptools>=61.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speedcloud"
version = "0.0.1"
requires-python = ">=3.10"
authors = [{name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"}]
description = "Speedwagon in the Cloud!!!"
dependencies =[
    "aiofiles",
    "fastapi",
    "pydantic>=2.0",
    "pydantic-settings",
    'sse_starlette',
    "python-multipart",
    "tomlkit",
    "speedwagon>=0.4.0b6",
    "httpx"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose -m \"not notFromSetupPy\""
norecursedirs = "thirdparty"
pythonpath = "src/backend"
junit_family="xunit2"
markers=[
    "adapter",
    "slow: mark test as slow.",
    "model_data",
    "integration"
]

[tool.pydocstyle]
# Ignore files that end in _ui.py because they are machine generated
match="((?!test).*)(^(?!.*(ui)).*)\\.py"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src/backend"
namespace_packages = false

[[tool.mypy.overrides]]
module = "speedcloud.api.routes"
check_untyped_defs = true

[tool.setuptools.packages.find]
where = ["src/backend"]
include = ["speedcloud*"]

[tool.coverage.run]
relative_files = true
branch = true
source = ["src/backend/"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
[tool.ruff]
select = ["E", "F", "W", "D", "B"]
exclude = [
    "windows_build",
    "tests",
]
line-length = 79

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 79